spade-tests/src/snapshots/spade_tests__hir_lowering__tests__bidirectional_ports_cannot_be_no_mangle.snap
---
source: spade-tests/src/hir_lowering.rs
---
entity x(#[no_mangle] t: (&bool, &mut bool)) -> bool {
    set t#1 = false;
    true
}


error: Ports with both & and &mut cannot be #[no_mangle]
  ┌─ testinput:1:10
  │
1 │ entity x(#[no_mangle] t: (&bool, &mut bool)) -> bool {
  │          ^^^^^^^^^^^^    ------------------ This has both & and &mut components
  │          │                
  │          Not allowed on mixed-direction ports


